# simple-parse-view-DSA-projection

./: .gitignore  crop_resample.py  environment.yaml  main.py  pixi.toml  proj_odl.py  pyproject.toml  readme.md  saver.py
configs/: CCTAData.json  default_config_oral.yaml  imageCAS.json
old_ref_scripts/: train_gaussian_compare_oral.py  xueming_data_process2.py
sparse_view_dataset/: __init__.py  affine_transforms.py  cli.py  cone_beam.py  constants.py  io.py  mesh_utils.py  preprocess.py  projection.py  torch3d_render.py  visualize.py
tests/: test_cli_smoke.py  test_geometry.py  test_preprocess.py  test_projection.py
